# routing/projects/route.js
@@ -3,7 +3,7 @@ const router = express.Router();
 const project = require('./details.js');
 
 router
-  .post('/app/project', project.createProject)
+  .post('/app/projects', project.createProject)
   .put('/app/project/comment/:id', project.addComment)
   .get('/app/projects', project.getAllProject)
   .delete('/app/project/:id', project.deleteProject)
